# asteroseismology

./: README.md  TIC262876102.csv  pyproject.toml
asteroseismology/: __init__.py  constants.py  freq_analysis.py  math.py  test.data  tests.ipynb
