[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroseismology"
version = "0.1.2"
description = "Useful functions for asteroseismology"
readme = "README.md"
authors = [
  { name="Camino Mesa, Carlos C.", email="carlosccamino@ugr.es" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "intervaltree"
]

[project.urls]
Homepage = "https://github.com/carlosccamino/asteroseismology"
Issues = "https://github.com/carlosccamino/asteroseismology/issues"
